# lame

./: .clang-format  .gitignore  ChangeLog  INSTALL  Makefile.MSVC  Makefile.am  Makefile.in  USAGE  aclocal.m4  config.h.in  configMS.h  configure  configure.ac  lame.spec.in
ACM/: Makefile.in
ACM/ADbg/: Makefile.in
ACM/ddk/: Makefile.in
ACM/tinyxml/: Makefile.in
Dll/: BladeMP3EncDLL.c  BladeMP3EncDLL.h  Makefile.in
doc/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile.in  Makefile.am  Makefile.in  maintainer-build-matrix.md  maintainer-coverage.md  maintainer-perf.md  maintainer-quality.md
doc/doxygen/: internal.md  lame-theme.css  mainpage.md  unit_tests.dox
doc/html/: Makefile.am  Makefile.in  detailed.html  history.html
doc/man/: Makefile.am  Makefile.in  lame.1  mp3rtp.1
dshow/: Makefile.in
frontend/: Makefile.am  Makefile.in  console.c  get_audio.c  get_audio.h  lame_main.c  main.c  mp3rtp.c  parse.c  parse.h  rtp.c  timestatus.c
include/: Makefile.in  lame.def  lame.h  libmp3lame.sym
libmp3lame/: Makefile.am  Makefile.in  VbrTag.c  bitstream.c  bitstream.h  encoder.c  fft.c  gain_analysis.c  id3tag.c  l3side.h  lame.c  machine.h  mpglib_interface.c  newmdct.c  presets.c  psymodel.c  psymodel.h  quantize.c  quantize_pvt.c  quantize_pvt.h  set_get.c  set_get.h  takehiro.c  util.c  util.h  vbrquantize.c  version.c  version.h
libmp3lame/i386/: Makefile.in
libmp3lame/vector/: Makefile.am  Makefile.in  xmm_quantize_sub.c
mac/: Makefile.in  Precompile_Common.h
maintainer/: coverage-mkinputs.py  coverage-report.py  coverage-run.sh  coverage-workload.txt  gen-build-matrix.ps1  gen-build-matrix.sh  gen-coverage-matrix.sh  perf-compare.sh  quality-compare.py  setup-quality-corpus.sh  setup-windows-deps.ps1
misc/: Makefile.in
mpglib/: Makefile.in  mpglib.h
test/: CBRABR.op  Makefile.am  Makefile.in  VBR.op  VBRold.op  lametest.py  misc.op  shortVBR.op
test/unit/: Makefile.am  Makefile.in  parse_test_stubs.c  test_encode_mono_interleaved.c  test_encode_nonfinite.c  test_get_audio_aiff.c  test_id3tag.c  test_merge_argv.c  test_parse_id3.c  test_parse_pathlen.c  test_sanity.c  test_set_get.c  test_stubs.c  test_totalframes.c
vc_solution/: .gitignore  Makefile.am  Makefile.in  README.vs.txt  README.vs2026.txt  vs2026_lame.sln  vs2026_lame_acm.vcxproj  vs2026_lame_acm_adbg.vcxproj  vs2026_lame_acm_tinyxml.vcxproj  vs2026_lame_clients.sln  vs2026_lame_config.props  vs2026_lame_dshow.vcxproj  vs2026_lame_enc_dll.vcxproj  vs2026_lame_lame.vcxproj  vs2026_lame_mp3rtp.vcxproj  vs2026_lame_mp3x.vcxproj  vs2026_lame_test.vcxproj  vs2026_libmp3lame.vcxproj  vs2026_libmp3lame_dll.vcxproj  vs2026_libsndfile_config.props  vs_gtk_config.props  vs_lame.sln  vs_lame.slnx  vs_lame_acm.vcxproj  vs_lame_acm_adbg.vcxproj  vs_lame_acm_tinyxml.vcxproj  vs_lame_clients.sln  vs_lame_clients.slnx  vs_lame_config.props  vs_lame_dshow.vcxproj  vs_lame_enc_dll.vcxproj  vs_lame_lame.vcxproj  vs_lame_mp3rtp.vcxproj  vs_lame_mp3x.vcxproj  vs_lame_test.vcxproj  vs_libmp3lame.vcxproj  vs_libmp3lame.vcxproj.filters  vs_libmp3lame_dll.vcxproj  vs_libmpg123_config.props  vs_libsndfile_config.props
