## $Id$

include $(top_srcdir)/Makefile.am.global

SUBDIRS = unit

# Hand-maintained test material that predates the automated harness. It was
# never referenced by any Makefile; list it here so "make dist" keeps it.
EXTRA_DIST = \
	lame_test.cpp \
	lametest.py \
	cvscheck.sh \
	CBRABR.op \
	VBR.op \
	VBRold.op \
	misc.op \
	nores.op \
	shortCBRABR.op \
	shortVBR.op
