## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	README.vs2026.txt \
	vs2026_arch_nasm.props \
	vs2026_arch_sse2.props \
	vs2026_arch_x87.props \
	vs2026_gtk_config.props \
	vs2026_lame_acm_adbg.vcxproj \
	vs2026_lame_acm_adbg.vcxproj.filters \
	vs2026_lame_acm_tinyxml.vcxproj \
	vs2026_lame_acm.vcxproj \
	vs2026_lame_acm.vcxproj.filters \
	vs2026_lame_clients.sln \
	vs2026_lame_config.props \
	vs2026_lame_dshow.vcxproj \
	vs2026_lame_dshow.vcxproj.filters \
	vs2026_lame_enc_dll.vcxproj \
	vs2026_lame_enc_dll.vcxproj.filters \
	vs2026_lame_lame.vcxproj \
	vs2026_lame_lame.vcxproj.filters \
	vs2026_lame_mp3rtp.vcxproj \
	vs2026_lame_mp3rtp.vcxproj.filters \
	vs2026_lame_mp3x.vcxproj \
	vs2026_lame_mp3x.vcxproj.filters \
	vs2026_lame_test.vcxproj \
	vs2026_lame.sln \
	vs2026_libmp3lame_dll.vcxproj \
	vs2026_libmp3lame.vcxproj \
	vs2026_libmp3lame.vcxproj.filters \
	vs2026_libmpg123_config.props \
	vs2026_libsndfile_config.props \
	vs2026_nasm.props \
	vs2026_nasm.targets \
	vs2026_nasm.xml \
	vs2026_win71sdk_config.props
