## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	README.vs.txt \
	vs_arch_nasm.props \
	vs_arch_sse2.props \
	vs_arch_x87.props \
	vs_gtk_config.props \
	vs_lame_acm_adbg.vcxproj \
	vs_lame_acm_adbg.vcxproj.filters \
	vs_lame_acm_tinyxml.vcxproj \
	vs_lame_acm.vcxproj \
	vs_lame_acm.vcxproj.filters \
	vs_lame_clients.sln \
	vs_lame_config.props \
	vs_lame_dshow.vcxproj \
	vs_lame_dshow.vcxproj.filters \
	vs_lame_enc_dll.vcxproj \
	vs_lame_enc_dll.vcxproj.filters \
	vs_lame_lame.vcxproj \
	vs_lame_lame.vcxproj.filters \
	vs_lame_mp3rtp.vcxproj \
	vs_lame_mp3rtp.vcxproj.filters \
	vs_lame_mp3x.vcxproj \
	vs_lame_mp3x.vcxproj.filters \
	vs_lame_test.vcxproj \
	vs_lame.sln \
	vs_libmp3lame_dll.vcxproj \
	vs_libmp3lame.vcxproj \
	vs_libmp3lame.vcxproj.filters \
	vs_libmpg123_config.props \
	vs_libsndfile_config.props \
	vs_nasm.props \
	vs_nasm.targets \
	vs_nasm.xml \
	vs_win71sdk_config.props
